# u2d-base

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  RUL  aclocal.m4  agent.cpp  agent.h  bodysensor.cpp  bodysensor.h  config.h  config.h.in  config.status  configure  configure.ac  connection.cpp  connection.h  lex.yy.cc  libu2d.pc.in  main.cpp  parser-init.cpp  parser-o-see.cpp  parser-player_param.cpp  parser-see.cpp  parser-sense_body.cpp  parser-server-param.cpp  parser-server_param.cpp  parserbase.cpp  parserbase.h  player_type.cpp  player_type.h  see.cpp  see.h  sense_body.cpp  sense_body.h  (+8 more)
cmake/: libu2dConfig
include/u2d/: agent.hpp  command.hpp
include/u2d/geometry/: algebra.hpp  geometry.hpp
include/u2d/network/: connection.hpp
include/u2d/parser/: generate.sh  parser-base.hpp  parser-impl.hpp  parser.hpp  scanner-base.hpp  scanner-impl.hpp  scanner.hpp
include/u2d/perception/: body.hpp  detailed_visual_object.hpp  field.h  flags.hpp  marks.hpp  model.hpp  player.hpp  player_param.hpp  player_type.h  see.h  server_param.hpp  visual_object.hpp
include/u2d/perception/visual-objects/: ball.h  flag.h  line.h  player.h
src/: Makefile.am  Makefile.in  agent.cpp  agent.h  agent.hpp  command.cpp  command.hpp  main.cpp
src/geometry/: Makefile.am  Makefile.in  algebra.cpp  algebra.hpp  geometry.cpp  geometry.hpp  geometry.tpp  types.cpp  types.h
src/model/: field.cpp  field.h  model.cpp  model.h  player_param.h  player_type.h  see.cpp  see.h  sense_body.h  server_param.cpp  server_param.h
src/model/visual-objects/: ball.cpp  ball.h  base-objects.cpp  base-objects.h  flag.cpp  flag.h  line.cpp  line.h  player.cpp  player.h
src/network/: Makefile.am  Makefile.in  connection.cpp  connection.h  connection.hpp
src/parser/: Makefile.am  Makefile.in  Parser.h  Parser.ih  Parserbase.h  Scanner.h  Scanner.ih  Scannerbase.h  generate.sh  lex.cc  parse.cc  parser.cpp  parser.y  parser.y.backup.y  scanner.cpp  scanner.l  temporary_data.cpp  temporary_data.h
src/perception/: Makefile.am  Makefile.in  body.cpp  body.hpp  detailed_visual_object.cpp  detailed_visual_object.hpp  field.cpp  field.h  flags.cpp  flags.hpp  marks.cpp  marks.hpp  model.cpp  model.hpp  player.cpp  player.hpp  player_param.cpp  player_param.hpp  player_type.h  see.cpp  see.h  server_param.cpp  server_param.hpp  visual_object.cpp  visual_object.hpp
src/perception/visual-objects/: ball.cpp  ball.h  flag.cpp  flag.h  line.cpp  line.h  player.cpp  player.h
test/: CMakeLists.txt  Makefile.am  Makefile.in  agent.cpp  cc-intersect.h  circle_intersection.m  connection.cpp  geometry-perception.cpp  geometry.cpp  parser.cpp  perception.cpp  positioning.cpp  positioning_error_model.m
u2d_agent/: README  agent.cpp  agent.h  cmdline.c  cmdline.ggo  cmdline.h  connection.cpp  connection.h  init.cpp  init.h  parser-init.cpp  parser-player_param.cpp  parser-player_type.cpp  parser-see.cpp  parser-sense_body.cpp  parser-server_param.cpp  parser.h  parserbase.cpp  play.cpp  player_param.cpp  player_param.h  see.cpp  see.h  server_param.h  u2d_agent.pro
