AM_CPPFLAGS = -pipe -Wall -Werror --pedantic
noinst_LTLIBRARIES = libu2d_geometry.la

libu2d_geometry_la_SOURCES = \
	geometry.hpp \
	geometry.tpp \
	geometry.cpp
u2d_includedir = $(includedir)/u2d/geometry
u2d_libincludedir = $(libdir)/u2d/include
u2d_include_HEADERS =  \
	geometry.hpp \
	geometry.tpp
