AM_CPPFLAGS = -pipe -Wall -Werror --pedantic
noinst_LTLIBRARIES = libu2d_parser.la

libu2d_parser_la_SOURCES = \
	lex.cc \
	parse.cc \
	Parserbase.h \
	Parser.h \
	Parser.ih \
	Scanner.h \
	Scannerbase.h \
	Scanner.ih
u2d_includedir = $(includedir)/u2d/parser
u2d_libincludedir = $(libdir)/u2d/include
u2d_include_HEADERS =  \
	Parserbase.h \
	Parser.h \
	Parser.ih \
	Scanner.h \
	Scannerbase.h \
	Scanner.ih
