AM_CPPFLAGS = -pipe -Wall -Werror --pedantic
noinst_LTLIBRARIES = libu2d_perception.la

libu2d_perception_la_SOURCES = \
	model.cpp \
	visual_object.cpp \
	detailed_visual_object.cpp
u2d_includedir = $(includedir)/u2d/perception
u2d_libincludedir = $(libdir)/u2d/include
u2d_include_HEADERS =  \
	model.hpp \
	server_param.hpp \
	player_param.hpp \
	visual_object.hpp \
	detailed_visual_object.hpp \
	body.hpp
